# Swift-

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: compiler_benchmarks.rs
docs/: COMPILER_DESIGN.md  INSTALL.md  LANGUAGE_SPEC.md
examples/: calculator.spp  hello.spp  sample.spp  showcase.spp
src/: main.rs
src/compiler/: analyzer.rs  ast.rs  codegen.rs  lexer.rs  mod.rs  optimizer.rs  parser.rs
src/debugger/: breakpoint.rs  dap.rs  memory.rs  mod.rs  process.rs  stack.rs  symbols.rs  watchpoint.rs
src/debugger/remote/: client.rs  protocol.rs  server.rs
src/formatter/: mod.rs
src/lsp/: mod.rs
src/runtime/: mod.rs
src/stdlib/: collections.rs  concurrent.rs  io.rs  math.rs  mod.rs
tests/: compiler_tests.rs  debug_symbols_tests.rs
tools/vscode-swiftpp/: package.json
tools/vscode-swiftpp/src/: debugAdapter.ts  extension.ts
tools/vscode-swiftpp/syntaxes/: swiftpp.tmLanguage.json
